--- a/style.css
+++ b/style.css
@@ -3,3 +3,143 @@ Header background - #FFDBAA
 button - #805215
 Header Text - #553100
 Main background - #D4A76A*/
+.div0 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 850px;
+  height: 100px;
+  border: 3px solid black;
+  color: #553100;
+  padding: 10px;
+  font-size: 36px;
+  font-weight: bold;
+  font-family: Sans-serif;
+  text-align: left;
+  }
+
+.h1 {
+font-size: 12px;
+}
+
+
+.div1, .div2, .div3 {
+  position: absolute;
+  center: 0px;
+  width: 200px;
+  height: 100px;
+  border: 3px none black;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  font-weight: normal;
+  font-family: Sans-serif;
+
+}
+
+.div4 {
+  position: absolute;
+  bottom: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 800px;
+  height: 100px;
+  border: 3px solid black;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  font-family: Sans-serif;
+}
+.div1 {
+left: 0px;
+bottom: 300px;
+}
+.div2 {
+left: 250px;
+bottom: 300px;
+}
+.div3 {
+right: 150px;
+bottom: 300px;
+}
+
+.div4 { bottom: 0px; }
+
+.inner-box {
+  width: 80%;
+  height: 50px;
+  background-color: #805215;
+  border: 2px solid black;
+  margin: auto;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  font-family: Sans-serif;
+}
+
+.inner-box1 {
+  position: absolute;
+  right: 40%;
+  width: 12%;
+  height: 50px;
+  background-color: #805215;
+  border: 2px solid black;
+  margin: auto;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+
+.inner-box2 {
+
+  position: absolute;
+  right: 27%;
+  width: 12%;
+  height: 50px;
+  background-color: #805215;
+  border: 2px solid black;
+  margin: auto;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+
+.inner-box3 {
+  position: absolute;
+  right: 14%;
+  width: 12%;
+  height: 50px;
+  background-color: #805215;
+  border: 2px solid black;
+  margin: auto;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+
+.inner-box4 {
+  position: absolute;
+  right: 1%;
+  width: 12%;
+  height: 50px;
+  background-color: #805215;
+  border: 2px solid black;
+  margin: auto;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+
+body{
+  margin: 20px;
+  background: #D4A76A;
+}
