--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ Main background - #D4A76A*/
   width: 850px;
   height: 100px;
   border: 3px solid black;
+  background-color: #FFDBAA;
   color: #553100;
   padding: 10px;
   font-size: 36px;
@@ -18,53 +19,77 @@ Main background - #D4A76A*/
   font-family: Sans-serif;
   text-align: left;
   }
-
 .h1 {
-font-size: 12px;
+font-size: 20px;
 }
+.h2 {
+font-size: 20px;
+}
+.h3 {
+font-size: 20px;
+}
+.h4 {
+font-size: 20px}
 
-
-.div1, .div2, .div3 {
+.outer-box1 {
   position: absolute;
-  center: 0px;
-  width: 200px;
-  height: 100px;
+  center: 0;
+  transform: translateX(-6%);
+  transform: translateY(60%);
+  width: 300px;
+  height: 200px;
   border: 3px none black;
   background-color: white;
   padding: 10px;
   text-align: center;
   font-weight: normal;
   font-family: Sans-serif;
-
 }
 
-.div4 {
+.outer-box2 {
+  position: absolute;
+  left: 36%;
+  transform: translateY(60%);
+  width: 300px;
+  height: 200px;
+  border: 3px none black;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  font-weight: normal;
+  font-family: Sans-serif;
+}
+
+.outer-box3 {
+  position: absolute;
+  center: 0;
+  transform: translateX(4%);
+  transform: translateY(60%);
+  right: 0px;
+  width: 300px;
+  height: 200px;
+  border: 3px none black;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  font-weight: normal;
+  font-family: Sans-serif;
+}
+.outer-box4 {
   position: absolute;
   bottom: 200px;
   left: 50%;
   transform: translateX(-50%);
   width: 800px;
-  height: 100px;
+  height: 200px;
   border: 3px solid black;
   background-color: white;
   padding: 10px;
   text-align: center;
   font-family: Sans-serif;
 }
-.div1 {
-left: 0px;
-bottom: 300px;
-}
-.div2 {
-left: 250px;
-bottom: 300px;
-}
-.div3 {
-right: 150px;
-bottom: 300px;
-}
 
-.div4 { bottom: 0px; }
+.outer-box4 { bottom: 0px; }
 
 .inner-box {
   width: 80%;
